--- a/date/2024-09/page-2.htm
+++ b/date/2024-09/page-2.htm
@@ -222,16 +222,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/free-nodes/2024-11-29-free-node-subscribe-links.htm" title="「11月29日」最高速度21.4M/S，2024年Clash/SSR/V2ray/Shadowrocket每天更新免费节点订阅链接">「11月29日」最高速度21.4M/S，2024年Clash/SSR/V2ray/Shadowrocket每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-8-29-free-node-subscribe-links.htm" title="「8月29日」最高速度23M/S，2024年Shadowrocket/V2ray/Clash/SSR每天更新免费节点订阅链接">「8月29日」最高速度23M/S，2024年Shadowrocket/V2ray/Clash/SSR每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/news/article-26671.htm" title="宠物粮食店名称大全四个字怎么取（宠物粮创意名字）">宠物粮食店名称大全四个字怎么取（宠物粮创意名字）</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-11-26-free-high-speed-nodes.htm" title="「11月26日」最高速度18.2M/S，2024年V2ray/Shadowrocket/SSR/Clash每天更新免费节点订阅链接">「11月26日」最高速度18.2M/S，2024年V2ray/Shadowrocket/SSR/Clash每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-12-17-free-subscribe-node.htm" title="「12月17日」最高速度19.1M/S，2024年Shadowrocket/V2ray/Clash/SSR每天更新免费节点订阅链接">「12月17日」最高速度19.1M/S，2024年Shadowrocket/V2ray/Clash/SSR每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-10-21-free-node-subscribe-links.htm" title="「10月21日」最高速度21.9M/S，2024年Shadowrocket/SSR/Clash/V2ray每天更新免费节点订阅链接">「10月21日」最高速度21.9M/S，2024年Shadowrocket/SSR/Clash/V2ray每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-10-17-free-node-subscribe-links.htm" title="「10月17日」最高速度18.4M/S，2024年Clash/V2ray/Shadowrocket/SSR每天更新免费节点订阅链接">「10月17日」最高速度18.4M/S，2024年Clash/V2ray/Shadowrocket/SSR每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-12-11-free-v2ray.htm" title="「12月11日」最高速度20.8M/S，2024年V2ray/Shadowrocket/Clash/SSR每天更新免费节点订阅链接">「12月11日」最高速度20.8M/S，2024年V2ray/Shadowrocket/Clash/SSR每天更新免费节点订阅链接</a></li>
                         <li class="py-2"><a href="/free-nodes/2024-10-31-node-share.htm" title="「10月31日」最高速度20.4M/S，2024年V2ray/SSR/Shadowrocket/Clash每天更新免费节点订阅链接">「10月31日」最高速度20.4M/S，2024年V2ray/SSR/Shadowrocket/Clash每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-12-10-free-v2ray.htm" title="「12月10日」最高速度21.7M/S，2024年Shadowrocket/Clash/V2ray/SSR每天更新免费节点订阅链接">「12月10日」最高速度21.7M/S，2024年Shadowrocket/Clash/V2ray/SSR每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-8-17-free-node-subscribe.htm" title="「8月17日」最高速度18M/S，2024年Shadowrocket/V2ray/SSR/Clash每天更新免费节点订阅链接">「8月17日」最高速度18M/S，2024年Shadowrocket/V2ray/SSR/Clash每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-9-15-free-high-speed-nodes.htm" title="「9月15日」最高速度22M/S，2024年Clash/SSR/V2ray/Shadowrocket每天更新免费节点订阅链接">「9月15日」最高速度22M/S，2024年Clash/SSR/V2ray/Shadowrocket每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-10-26-free-subscribe-node.htm" title="「10月26日」最高速度21.7M/S，2024年V2ray/Clash/SSR/Shadowrocket每天更新免费节点订阅链接">「10月26日」最高速度21.7M/S，2024年V2ray/Clash/SSR/Shadowrocket每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-11-16-node-share-links.htm" title="「11月16日」最高速度19.9M/S，2024年SSR/V2ray/Clash/Shadowrocket每天更新免费节点订阅链接">「11月16日」最高速度19.9M/S，2024年SSR/V2ray/Clash/Shadowrocket每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/news/article-18872.htm" title="动物疫苗接种的目的是什么意思（动物疫苗接种的目的是什么意思啊）">动物疫苗接种的目的是什么意思（动物疫苗接种的目的是什么意思啊）</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-10-11-clash-v2ray-ss-ssr.htm" title="「10月11日」最高速度20.1M/S，2024年Shadowrocket/V2ray/SSR/Clash每天更新免费节点订阅链接">「10月11日」最高速度20.1M/S，2024年Shadowrocket/V2ray/SSR/Clash每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-10-23-free-v2ray.htm" title="「10月23日」最高速度20.4M/S，2024年V2ray/SSR/Clash/Shadowrocket每天更新免费节点订阅链接">「10月23日」最高速度20.4M/S，2024年V2ray/SSR/Clash/Shadowrocket每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-12-16-free-v2ray-subscribe.htm" title="「12月16日」最高速度18.1M/S，2024年Shadowrocket/Clash/V2ray/SSR每天更新免费节点订阅链接">「12月16日」最高速度18.1M/S，2024年Shadowrocket/Clash/V2ray/SSR每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-8-18-free-node-subscribe.htm" title="「8月18日」最高速度21.3M/S，2024年SSR/V2ray/Shadowrocket/Clash每天更新免费节点订阅链接">「8月18日」最高速度21.3M/S，2024年SSR/V2ray/Shadowrocket/Clash每天更新免费节点订阅链接</a></li>
                     </ul>
     </div>
 </div>
@@ -243,7 +243,7 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">51</span> <a href="/date/2024-12/" title="2024-12 归档">2024-12</a></h4>
+                <h4><span class="badge" style="float: right;">57</span> <a href="/date/2024-12/" title="2024-12 归档">2024-12</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">34</span> <a href="/date/2024-11/" title="2024-11 归档">2024-11</a></h4>
@@ -270,6 +270,15 @@
                 <div class="row text-center">
                     <div class="col-md-12">
                         <div class="border-top">
+                    <p>
+                        <a href="/">首页</a> | 
+                        <a href="/free-node/">免费节点</a> | 
+                        <a href="/news/">新闻资讯</a> |
+                        <a href="/about-us.htm">关于我们</a> |
+                        <a href="/disclaimer.htm">免责申明</a> |
+                        <a href="/privacy.htm">隐私申明</a> |
+                        <a href="/sitemap.xml">网站地图</a>
+                    </p>
                             <p>
                                 <a href="/">V2ray Node免费节点官网</a> 版权所有 Powered by WordPress
                             </p>
