--- a/about-us.htm
+++ b/about-us.htm
@@ -95,16 +95,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/news/article-21591.htm" title="义乌哪里有领养中心 义乌哪里有领养中心啊">义乌哪里有领养中心 义乌哪里有领养中心啊</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-9-14-free-v2ray.htm" title="「9月14日」最高速度20.8M/S，2024年Clash/Shadowrocket/V2ray/SSR每天更新免费节点订阅链接">「9月14日」最高速度20.8M/S，2024年Clash/Shadowrocket/V2ray/SSR每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-12-21-free-v2ray.htm" title="「12月21日」最高速度19.1M/S，2024年Shadowrocket/SSR/Clash/V2ray每天更新免费节点订阅链接">「12月21日」最高速度19.1M/S，2024年Shadowrocket/SSR/Clash/V2ray每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-10-11-clash-v2ray-ss-ssr.htm" title="「10月11日」最高速度20.1M/S，2024年Shadowrocket/V2ray/SSR/Clash每天更新免费节点订阅链接">「10月11日」最高速度20.1M/S，2024年Shadowrocket/V2ray/SSR/Clash每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-10-21-free-node-subscribe-links.htm" title="「10月21日」最高速度21.9M/S，2024年Shadowrocket/SSR/Clash/V2ray每天更新免费节点订阅链接">「10月21日」最高速度21.9M/S，2024年Shadowrocket/SSR/Clash/V2ray每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-9-12-free-v2ray-subscribe.htm" title="「9月12日」最高速度20.5M/S，2024年Shadowrocket/SSR/Clash/V2ray每天更新免费节点订阅链接">「9月12日」最高速度20.5M/S，2024年Shadowrocket/SSR/Clash/V2ray每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-12-3-free-v2ray.htm" title="「12月3日」最高速度21.3M/S，2024年Clash/SSR/Shadowrocket/V2ray每天更新免费节点订阅链接">「12月3日」最高速度21.3M/S，2024年Clash/SSR/Shadowrocket/V2ray每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-10-20-free-high-speed-nodes.htm" title="「10月20日」最高速度23M/S，2024年SSR/Clash/V2ray/Shadowrocket每天更新免费节点订阅链接">「10月20日」最高速度23M/S，2024年SSR/Clash/V2ray/Shadowrocket每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-8-30-node-share.htm" title="「8月30日」最高速度21.8M/S，2024年Shadowrocket/V2ray/SSR/Clash每天更新免费节点订阅链接">「8月30日」最高速度21.8M/S，2024年Shadowrocket/V2ray/SSR/Clash每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/news/article-27139.htm" title="开宠物医院最低多少平（开宠物医院一年能赚多少）">开宠物医院最低多少平（开宠物医院一年能赚多少）</a></li>
+                        <li class="py-2"><a href="/news/article-23439.htm" title="动物疫苗论文（动物疫苗研究进展）">动物疫苗论文（动物疫苗研究进展）</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-9-3-free-high-speed-nodes.htm" title="「9月3日」最高速度23M/S，2024年V2ray/Clash/Shadowrocket/SSR每天更新免费节点订阅链接">「9月3日」最高速度23M/S，2024年V2ray/Clash/Shadowrocket/SSR每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-8-23-node-share-links.htm" title="「8月23日」最高速度22.1M/S，2024年V2ray/SSR/Shadowrocket/Clash每天更新免费节点订阅链接">「8月23日」最高速度22.1M/S，2024年V2ray/SSR/Shadowrocket/Clash每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/news/article-29937.htm" title="python3操作hdfs库中报错问题总结">python3操作hdfs库中报错问题总结</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-10-24-clash-v2ray-ss-ssr.htm" title="「10月24日」最高速度18.3M/S，2024年SSR/Shadowrocket/Clash/V2ray每天更新免费节点订阅链接">「10月24日」最高速度18.3M/S，2024年SSR/Shadowrocket/Clash/V2ray每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-10-14-free-node-subscribe.htm" title="「10月14日」最高速度21.2M/S，2024年SSR/Shadowrocket/Clash/V2ray每天更新免费节点订阅链接">「10月14日」最高速度21.2M/S，2024年SSR/Shadowrocket/Clash/V2ray每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-11-3-free-v2ray.htm" title="「11月3日」最高速度21.3M/S，2024年Shadowrocket/Clash/SSR/V2ray每天更新免费节点订阅链接">「11月3日」最高速度21.3M/S，2024年Shadowrocket/Clash/SSR/V2ray每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/news/article-25284.htm" title="宠物领养狗狗的流程（领养宠物的途径）">宠物领养狗狗的流程（领养宠物的途径）</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-11-25-free-subscribe-node.htm" title="「11月25日」最高速度20.6M/S，2024年Clash/V2ray/Shadowrocket/SSR每天更新免费节点订阅链接">「11月25日」最高速度20.6M/S，2024年Clash/V2ray/Shadowrocket/SSR每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/news/article-21588.htm" title="开宠物店盈利吗现在还有吗（开宠物店到底赚不赚钱）">开宠物店盈利吗现在还有吗（开宠物店到底赚不赚钱）</a></li>
                     </ul>
     </div>
 </div>
@@ -116,7 +116,7 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">69</span> <a href="/date/2024-12/" title="2024-12 归档">2024-12</a></h4>
+                <h4><span class="badge" style="float: right;">75</span> <a href="/date/2024-12/" title="2024-12 归档">2024-12</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">34</span> <a href="/date/2024-11/" title="2024-11 归档">2024-11</a></h4>
