--- a/free-nodes/page-8.htm
+++ b/free-nodes/page-8.htm
@@ -79,6 +79,32 @@
                 <div class="row">
                     <div class="col-md-9">
                         <div class="xcblog-blog-list">
+                                                        <div class="row item xcblog-blog-item" data-date="2024-10-16">
+                                <div class="col-md-3">
+                                    <a href="/free-nodes/2024-10-16-node-share-links.htm" class="xcblog-blog-url">
+                                        <img src="/uploads/20240810/23719af02f410bf11c49229669ae7202.webp" alt="「10月16日」最高速度20.1M/S，2024年Shadowrocket/V2ray/SSR/Clash每天更新免费节点订阅链接" class="img-fluid rounded">
+                                    </a>
+                                </div>
+                                <div class="col-md-9">
+                                    <a href="/free-nodes/2024-10-16-node-share-links.htm" class="xcblog-blog-url">
+                                        <h3 class="section-title mb-3 xcblog-blog-title">「10月16日」最高速度20.1M/S，2024年Shadowrocket/V2ray/SSR/Clash每天更新免费节点订阅链接</h3>
+                                    </a>
+                                    <p>这一次的节点更新覆盖了加拿大、新加坡、香港、日本、韩国、美国、欧洲等地区,最高速度可达20.1 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                                </div>
+                            </div>
+                                                        <div class="row item xcblog-blog-item" data-date="2024-10-15">
+                                <div class="col-md-3">
+                                    <a href="/free-nodes/2024-10-15-node-share.htm" class="xcblog-blog-url">
+                                        <img src="/uploads/20240810/37002d76718f469b4a4e2c3ae6e5a20a.webp" alt="「10月15日」最高速度20.7M/S，2024年Clash/Shadowrocket/V2ray/SSR每天更新免费节点订阅链接" class="img-fluid rounded">
+                                    </a>
+                                </div>
+                                <div class="col-md-9">
+                                    <a href="/free-nodes/2024-10-15-node-share.htm" class="xcblog-blog-url">
+                                        <h3 class="section-title mb-3 xcblog-blog-title">「10月15日」最高速度20.7M/S，2024年Clash/Shadowrocket/V2ray/SSR每天更新免费节点订阅链接</h3>
+                                    </a>
+                                    <p>这一次的节点更新覆盖了香港、美国、日本、欧洲、新加坡、韩国、加拿大等地区,最高速度可达20.7 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                                </div>
+                            </div>
                                                         <div class="row item xcblog-blog-item" data-date="2024-10-14">
                                 <div class="col-md-3">
                                     <a href="/free-nodes/2024-10-14-free-node-subscribe.htm" class="xcblog-blog-url">
@@ -183,32 +209,6 @@
                                     <p>这一次的节点更新覆盖了日本、欧洲、美国、韩国、新加坡、香港、加拿大等地区,最高速度可达23 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
                                 </div>
                             </div>
-                                                        <div class="row item xcblog-blog-item" data-date="2024-10-06">
-                                <div class="col-md-3">
-                                    <a href="/free-nodes/2024-10-6-free-v2ray.htm" class="xcblog-blog-url">
-                                        <img src="/uploads/20240810/95bb0467eb6b57893fa4076c6c174669.webp" alt="「10月6日」最高速度21.4M/S，2024年Shadowrocket/SSR/V2ray/Clash每天更新免费节点订阅链接" class="img-fluid rounded">
-                                    </a>
-                                </div>
-                                <div class="col-md-9">
-                                    <a href="/free-nodes/2024-10-6-free-v2ray.htm" class="xcblog-blog-url">
-                                        <h3 class="section-title mb-3 xcblog-blog-title">「10月6日」最高速度21.4M/S，2024年Shadowrocket/SSR/V2ray/Clash每天更新免费节点订阅链接</h3>
-                                    </a>
-                                    <p>这一次的节点更新覆盖了加拿大、新加坡、韩国、香港、日本、欧洲、美国等地区,最高速度可达21.4 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
-                                </div>
-                            </div>
-                                                        <div class="row item xcblog-blog-item" data-date="2024-10-05">
-                                <div class="col-md-3">
-                                    <a href="/free-nodes/2024-10-5-free-high-speed-nodes.htm" class="xcblog-blog-url">
-                                        <img src="/uploads/20240810/6bd468ee81514cc7f73ce3590652082a.webp" alt="「10月5日」最高速度18M/S，2024年SSR/Shadowrocket/V2ray/Clash每天更新免费节点订阅链接" class="img-fluid rounded">
-                                    </a>
-                                </div>
-                                <div class="col-md-9">
-                                    <a href="/free-nodes/2024-10-5-free-high-speed-nodes.htm" class="xcblog-blog-url">
-                                        <h3 class="section-title mb-3 xcblog-blog-title">「10月5日」最高速度18M/S，2024年SSR/Shadowrocket/V2ray/Clash每天更新免费节点订阅链接</h3>
-                                    </a>
-                                    <p>这一次的节点更新覆盖了日本、香港、欧洲、加拿大、美国、韩国、新加坡等地区,最高速度可达18 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
-                                </div>
-                            </div>
                             
                             <ul class="pagination"><li><a href="/free-nodes/page-7.htm">&laquo;</a></li> <li><a href="/free-nodes/">1</a></li><li><a href="/free-nodes/page-2.htm">2</a></li><li class="disabled"><span>...</span></li><li><a href="/free-nodes/page-5.htm">5</a></li><li><a href="/free-nodes/page-6.htm">6</a></li><li><a href="/free-nodes/page-7.htm">7</a></li><li class="active"><span>8</span></li><li><a href="/free-nodes/page-9.htm">9</a></li><li><a href="/free-nodes/page-10.htm">10</a></li><li><a href="/free-nodes/page-11.htm">11</a></li><li class="disabled"><span>...</span></li><li><a href="/free-nodes/page-13.htm">13</a></li><li><a href="/free-nodes/page-14.htm">14</a></li> <li><a href="/free-nodes/page-9.htm">&raquo;</a></li></ul>                        </div>
                     </div>
@@ -219,16 +219,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/free-nodes/2024-10-15-node-share.htm" title="「10月15日」最高速度20.7M/S，2024年Clash/Shadowrocket/V2ray/SSR每天更新免费节点订阅链接">「10月15日」最高速度20.7M/S，2024年Clash/Shadowrocket/V2ray/SSR每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-12-19-free-subscribe-node.htm" title="「12月19日」最高速度18.9M/S，2024年V2ray/SSR/Clash/Shadowrocket每天更新免费节点订阅链接">「12月19日」最高速度18.9M/S，2024年V2ray/SSR/Clash/Shadowrocket每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-12-10-free-v2ray.htm" title="「12月10日」最高速度21.7M/S，2024年Shadowrocket/Clash/V2ray/SSR每天更新免费节点订阅链接">「12月10日」最高速度21.7M/S，2024年Shadowrocket/Clash/V2ray/SSR每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/news/article-23439.htm" title="动物疫苗论文（动物疫苗研究进展）">动物疫苗论文（动物疫苗研究进展）</a></li>
-                        <li class="py-2"><a href="/news/article-22968.htm" title="宠物用品店代理（宠物用品店代理如何做）">宠物用品店代理（宠物用品店代理如何做）</a></li>
-                        <li class="py-2"><a href="/news/article-22507.htm" title="使用Python实现KNN算法解决简单分类问题">使用Python实现KNN算法解决简单分类问题</a></li>
-                        <li class="py-2"><a href="/news/article-20679.htm" title="戴尔设置第一启动项为ssd（戴尔设置硬盘第一启动）">戴尔设置第一启动项为ssd（戴尔设置硬盘第一启动）</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-8-19-free-node-subscribe-links.htm" title="「8月19日」最高速度22.1M/S，2024年Clash/Shadowrocket/SSR/V2ray每天更新免费节点订阅链接">「8月19日」最高速度22.1M/S，2024年Clash/Shadowrocket/SSR/V2ray每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-11-18-free-high-speed-nodes.htm" title="「11月18日」最高速度18.6M/S，2024年Shadowrocket/Clash/V2ray/SSR每天更新免费节点订阅链接">「11月18日」最高速度18.6M/S，2024年Shadowrocket/Clash/V2ray/SSR每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-9-11-free-v2ray-subscribe.htm" title="「9月11日」最高速度22.6M/S，2024年Shadowrocket/Clash/SSR/V2ray每天更新免费节点订阅链接">「9月11日」最高速度22.6M/S，2024年Shadowrocket/Clash/SSR/V2ray每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-10-30-free-subscribe-node.htm" title="「10月30日」最高速度22.1M/S，2024年Shadowrocket/SSR/V2ray/Clash每天更新免费节点订阅链接">「10月30日」最高速度22.1M/S，2024年Shadowrocket/SSR/V2ray/Clash每天更新免费节点订阅链接</a></li>
                         <li class="py-2"><a href="/news/article-23890.htm" title="广州市宠物领养（广州宠物领养公众号）">广州市宠物领养（广州宠物领养公众号）</a></li>
-                        <li class="py-2"><a href="/news/article-25744.htm" title="最贵的猫前十名（宠物猫咪价格表）">最贵的猫前十名（宠物猫咪价格表）</a></li>
+                        <li class="py-2"><a href="/news/article-29936.htm" title="删除PicGo的右键菜单的方法">删除PicGo的右键菜单的方法</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-8-28-free-v2ray.htm" title="「8月28日」最高速度18.7M/S，2024年V2ray/Clash/SSR/Shadowrocket每天更新免费节点订阅链接">「8月28日」最高速度18.7M/S，2024年V2ray/Clash/SSR/Shadowrocket每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/news/article-28530.htm" title="Java中File类方法详解以及实践_java">Java中File类方法详解以及实践_java</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-11-21-free-subscribe-node.htm" title="「11月21日」最高速度18.6M/S，2024年Shadowrocket/V2ray/SSR/Clash每天更新免费节点订阅链接">「11月21日」最高速度18.6M/S，2024年Shadowrocket/V2ray/SSR/Clash每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-10-31-node-share.htm" title="「10月31日」最高速度20.4M/S，2024年V2ray/SSR/Shadowrocket/Clash每天更新免费节点订阅链接">「10月31日」最高速度20.4M/S，2024年V2ray/SSR/Shadowrocket/Clash每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/news/article-29937.htm" title="python3操作hdfs库中报错问题总结">python3操作hdfs库中报错问题总结</a></li>
                     </ul>
     </div>
 </div>
@@ -240,7 +240,7 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">69</span> <a href="/date/2024-12/" title="2024-12 归档">2024-12</a></h4>
+                <h4><span class="badge" style="float: right;">75</span> <a href="/date/2024-12/" title="2024-12 归档">2024-12</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">34</span> <a href="/date/2024-11/" title="2024-11 归档">2024-11</a></h4>
